logs_33890110663/docs/_downloads/f638ddcd685797bf0eef840c98909df0/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/service/1"
                route:
                  cluster: service1
                  request_mirror_policies:
                  - cluster: "service1-mirror"
              - match:
                  prefix: "/service/2"
                route:
                  cluster: service2
                  request_mirror_policies:
                  - cluster_header: "x-mirror-cluster"

          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: service1
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service1
                port_value: 8080

  - name: service1-mirror
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service1-mirror
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service1-mirror
                port_value: 8080

  - name: service2
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service2
                port_value: 8080

  - name: service2-mirror
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service2-mirror
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service2-mirror
                port_value: 8080
